# OpenGlTemplate

./: .gitmodules  CMakeLists.txt
OpenGlTemplate/: CMakeLists.txt  OpenGlTemplate.cpp  OpenGlTemplate.h  main.cpp  shaders.h
OpenGlTemplate/Runtime/: main.frag  main.vert
